--- a/package.json
+++ b/package.json
@@ -65,5 +65,11 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "patch-package": {
+      "rimraf": "^5.0.7",
+      "glob": "^10.4.5"
+    }
   }
 }
